# dart_api_test

./: .gitmodules  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dart_api_test.dart  dart_api_test_bindings_generated.dart
src/: CMakeLists.txt  dart_api_test.c
windows/: CMakeLists.txt
